--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="Perfil">
 	<div class="Parte_Izquierda">
 		<div class="Imagen_Perfil">
-			<img src="FotoCV.jpg" >
+			<img src="FOTOCV.jpg" >
 		</div>
 		<div class="Perfil_Presentacion">
 			
