--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<div class="año">2014 - 2019</div>
 					<div class="content">
 						<p>Ingenieria Informatica</p>
-						<p>Facultad de Ingenieria, Universidad Nacicional de Jujuy.</p>
+						<p>Facultad de Ingenieria, Universidad Nacional de Jujuy.</p>
 					</div>
 				</div>
 				<div class="Dato">
