--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Responsive Resume UI Design in HTML and CSS</title>
+	<title>Primer Curriculum</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,10 +16,9 @@
 <div class="Perfil">
 	<div class="Parte_Izquierda">
 		<div class="Imagen_Perfil">
-			<img src="FOTOCV.jpg" >
+			<img src="FotoCV.jpg" >
 		</div>
 		<div class="Perfil_Presentacion">
-			
 			<div class="Perfil_Info">
 				<h3 class="Titulo"> Perfil</h3>
 				 <div class="linea"></div>
@@ -86,6 +85,24 @@
 					</div>
 				</div>
 			</div>
+			<div class="Perfil_Contacto">
+				<div class="Titulo">Intereses</div>
+				<div class="linea"></div>
+				<ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-camera" aria-hidden="true"></i></span>
+                        <span class="text">Fotografia</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-music" aria-hidden="true"></i></span>
+                        <span class="text">Musica</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span>
+                        <span class="text"> Libros</span>
+                    </li>
+                </ul>
+			</div>
 		</div>
 	</div>
 	<div class="Parte_Derecha">
@@ -107,7 +124,7 @@
 					<div class="año">2014 - 2019</div>
 					<div class="content">
 						<p>Ingenieria Informatica</p>
-						<p>Facultad de Ingenieria, Universidad Nacional de Jujuy.</p>
+						<p>Facultad de Ingenieria, Universidad Nacicional de Jujuy.</p>
 					</div>
 				</div>
 				<div class="Dato">
@@ -185,19 +202,19 @@
 			</div>
 		</div>
 		<section class="Formulario">
-			<button onclick="mostrar();" >Contactar</button>
+			<button onclick="mostrar();" >CONTACTAR</button>
 			<div  class="u-wrapper" >
 			  <div class="contact-content">
 				<form  id="form" action="" class="form">
 				  <label for="name">Nombre  <span>*</span></label>
 				  <input name="name" required type="text" id="name" placeholder="Nombre">
 				  <label for="email">Correo electrónico <span>*</span></label>
-				  <input name="email" type="text" id="email" required placeholder="master@gmail.com">
+				  <input name="email" type="text" id="email" required placeholder="correo@gmail.com">
 				  <label for="message">Mensaje</label>
 				  <textarea id="message" name="message" id="" cols="30" rows="10"></textarea>
-				  <button  type="submit" class="btn primary full">Enviar mensaje</button>
-				  <button  type="reset" class="btn primary full">Limpiar</button>
-				  <button  onclick="ocultar();" >Ocultar</button>
+				  <button  type="submit" class="btn primary full">ENVIAR MENSAJE</button>
+				  <button  type="reset" class="btn primary full">LIMPIAR</button>
+				  <button  onclick="ocultar();" >OCULTAR</button>
 				</form>
 			  </div>
 			</div>
